# perf_trampoline

./: Makefile  lel.c  lel.py  lel2.py  pyproject.toml  requirements-test.txt  setup.py
src/perf_trampoline/: __init__.py  _perf_trampoline.c  api.py  asm_trampoline.S  elf_support.h  gdb_support.c  gdb_support.h  perf_trampoline.pyi
tests/: test_api.py
