[build-system]

requires = [
     "setuptools",
     "wheel",
     "Cython",
     "pkgconfig"
]

build-backend = 'setuptools.build_meta'

[tool.ruff]
line-length = 95
select = ["F", "E", "W", "I001"]

[tool.ruff.isort]
force-single-line = true
known-first-party = ["perf_trampoline"]
known-third-party=["pytest"]

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party=["perf_trampoline"]
known_third_party=["rich", "elftools", "pytest"]

[tool.coverage.run]
source = [
  "src/perf_trampoline",
]
branch = true
parallel = true
omit = [
  "stringsource",
]

[tool.coverage.report]
show_missing = true